[gd_scene load_steps=2 format=3 uid="uid://b8x37u1dmaqn"]

[ext_resource type="Script" path="res://addons/roguelike_system/scripts/PossibilitiesGraph.gd" id="1_76oxv"]

[node name="PossibilitiesGraph" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_76oxv")

[node name="Container" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Container"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="Container/ScrollContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1

[node name="CurrentLevelLabel" type="Label" parent="Container/ScrollContainer/List"]
layout_mode = 2
text = "Current level:"
horizontal_alignment = 1

[node name="CurrentLevelButton" type="OptionButton" parent="Container/ScrollContainer/List"]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Container/ScrollContainer/List"]
layout_mode = 2

[node name="ClearSelection" type="Button" parent="Container/ScrollContainer/List"]
layout_mode = 2
text = "Clear room selection"

[node name="RoomsListLabel" type="Label" parent="Container/ScrollContainer/List"]
layout_mode = 2
text = "Rooms:"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Container/ScrollContainer/List"]
layout_mode = 2

[node name="RoomsContainer" type="VBoxContainer" parent="Container/ScrollContainer/List"]
layout_mode = 2

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
scroll_offset = Vector2(-32, 0)
right_disconnects = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_down" from="Container/ScrollContainer/List/ClearSelection" to="." method="_on_clear_selection_button_down"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_connection_request"]
